# tutorial-django-website

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/: mypy-matcher.json
.github/workflows/: deploy.yml  docker-publish.yml  main.yml  release-please.yml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
nginx/: nginx.conf
templates/accounts/: login.html  register.html  welcome.html
