[project]
name = "tutorial-django-website"
version = "0.1.0"
description = "A tutorial Django website project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.14",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
]
